--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css.map"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -20,31 +24,37 @@
       <div class="container">
         <div class="header">
           <nav class="navigation">
-            <a class="logo-header" href="./index.html">
+            <a class="logo" href="./index.html">
               Web<span class="logo-black">Studio</span>
             </a>
             <ul class="site-nav">
-              <li class="item">
-                <a href="./index.html" class="link current">Студия</a>
+              <li class="site-nav__item">
+                <a
+                  href="./index.html"
+                  class="site-nav__link site-nav__link--activ"
+                  >Студия</a
+                >
               </li>
-              <li class="item">
-                <a href="./portfolio.html" class="link">Портфолио</a>
+              <li class="site-nav__item">
+                <a href="./portfolio.html" class="site-nav__link">Портфолио</a>
               </li>
-              <li class="item"><a href="" class="link">Контакты</a></li>
+              <li class="site-nav__item">
+                <a href="" class="site-nav__link">Контакты</a>
+              </li>
             </ul>
           </nav>
           <ul class="contacts">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="link">
-                <svg class="icon-contacts" width="16" height="12">
+            <li class="contacts__item">
+              <a href="mailto:info@devstudio.com" class="contacts__link">
+                <svg class="contacts__icon" width="16" height="12">
                   <use href="./images/icons.svg#mail"></use>
                 </svg>
                 info@devstudio.com</a
               >
             </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="link">
-                <svg class="icon-contacts" width="10" height="16">
+            <li class="contacts__item">
+              <a href="tel:+380961111111" class="contacts__link">
+                <svg class="contacts__icon" width="10" height="16">
                   <use href="./images/icons.svg#phone"></use>
                 </svg>
                 +38 096 111 11 11</a
