--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -24,31 +20,37 @@
       <div class="container">
         <div class="header">
           <nav class="navigation">
-            <a class="logo-header" href="./index.html">
+            <a class="logo" href="./index.html">
               Web<span class="logo-black">Studio</span>
             </a>
             <ul class="site-nav">
-              <li class="item">
-                <a href="./index.html" class="link">Студия</a>
+              <li class="site-nav__item">
+                <a href="./index.html" class="site-nav__link">Студия</a>
               </li>
-              <li class="item">
-                <a href="./portfolio.html" class="link current">Портфолио</a>
+              <li class="site-nav__item">
+                <a
+                  href="./portfolio.html"
+                  class="site-nav__link site-nav__link--activ"
+                  >Портфолио</a
+                >
               </li>
-              <li class="item"><a href="" class="link">Контакты</a></li>
+              <li class="site-nav__item">
+                <a href="" class="site-nav__link">Контакты</a>
+              </li>
             </ul>
           </nav>
           <ul class="contacts">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="link">
-                <svg class="icon-contacts" width="16" height="12">
+            <li class="contacts__item">
+              <a href="mailto:info@devstudio.com" class="contacts__link">
+                <svg class="contacts__icon" width="16" height="12">
                   <use href="./images/icons.svg#mail"></use>
                 </svg>
                 info@devstudio.com</a
               >
             </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="link">
-                <svg class="icon-contacts" width="10" height="16">
+            <li class="contacts__item">
+              <a href="tel:+380961111111" class="contacts__link">
+                <svg class="contacts__icon" width="10" height="16">
                   <use href="./images/icons.svg#phone"></use>
                 </svg>
                 +38 096 111 11 11</a
@@ -81,18 +83,18 @@
             </li>
           </ul>
           <!-- Портфолио -->
-          <ul class="portfolio-list">
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+          <ul class="card-set">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/technoquack.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -100,23 +102,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Технокряк</h2>
-                  <p class="list">Веб-сайт</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Технокряк</h2>
+                  <p class="card-set__name">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/neworlean-vs-golden-star.jpg"
                     alt="Дизайн"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -124,23 +126,25 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                  <p class="list">Дизайн</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="card-set__name">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/seafood.jpg"
                     alt="Приложение"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -148,23 +152,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Ресторан Seafood</h2>
-                  <p class="list">Приложение</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Ресторан Seafood</h2>
+                  <p class="card-set__name">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/prime.jpg"
                     alt="Маркетинг"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -172,23 +176,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Проект Prime</h2>
-                  <p class="list">Маркетинг</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Проект Prime</h2>
+                  <p class="card-set__name">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/boxes.jpg"
                     alt="Приложение"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -196,23 +200,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Проект Boxes</h2>
-                  <p class="list">Приложение</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Проект Boxes</h2>
+                  <p class="card-set__name">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/inspiration-has-no-borders.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -220,23 +224,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Inspiration has no Borders</h2>
-                  <p class="list">Веб-сайт</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Inspiration has no Borders</h2>
+                  <p class="card-set__name">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/limited-edition.jpg"
                     alt="Дизайн"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -244,23 +248,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Издание Limited Edition</h2>
-                  <p class="list">Дизайн</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Издание Limited Edition</h2>
+                  <p class="card-set__name">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/lab.jpg"
                     alt="Маркетинг"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -268,23 +272,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Проект LAB</h2>
-                  <p class="list">Маркетинг</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Проект LAB</h2>
+                  <p class="card-set__name">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="elements">
-              <a href="" class="portfolio-link">
-                <div class="overflow">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__content">
                   <img
                     src="./images/growing-business.jpg"
                     alt="Приложение"
                     width="370"
                     height="294"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-text">
+                  <div class="card-set__overlay">
+                    <p class="card-set__text">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -292,9 +296,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="container-title">
-                  <h2 class="title">Growing Business</h2>
-                  <p class="list">Приложение</p>
+                <div class="card-set__meta">
+                  <h2 class="card-set__title">Growing Business</h2>
+                  <p class="card-set__name">Приложение</p>
                 </div>
               </a>
             </li>
