--- a/portfolio.html
+++ b/portfolio.html
@@ -355,7 +355,7 @@
               </a>
             </li>
             <li class="list-icons__item">
-              <a href="" class="list-icons__link social-link">
+              <a href="" class="list-icons__link social__link">
                 <svg
                   class="list-icons__icon social__icon"
                   width="20"
@@ -366,7 +366,7 @@
               </a>
             </li>
             <li class="list-icons__item">
-              <a href="" class="list-icons__link social-link">
+              <a href="" class="list-icons__link social__link">
                 <svg
                   class="list-icons__icon social__icon"
                   width="20"
@@ -377,7 +377,7 @@
               </a>
             </li>
             <li class="list-icons__item">
-              <a href="" class="list-icons__link social-link">
+              <a href="" class="list-icons__link social__link">
                 <svg
                   class="list-icons__icon social__icon"
                   width="20"
