--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
               </a>
             </li>
             <li class="list-icons__item">
-              <a href="" class="list-icons__link social-link">
+              <a href="" class="list-icons__link social__link">
                 <svg
                   class="list-icons__icon social__icon"
                   width="20"
@@ -536,7 +536,7 @@
               </a>
             </li>
             <li class="list-icons__item">
-              <a href="" class="list-icons__link social-link">
+              <a href="" class="list-icons__link social__link">
                 <svg
                   class="list-icons__icon social__icon"
                   width="20"
@@ -547,7 +547,7 @@
               </a>
             </li>
             <li class="list-icons__item">
-              <a href="" class="list-icons__link social-link">
+              <a href="" class="list-icons__link social__link">
                 <svg
                   class="list-icons__icon social__icon"
                   width="20"
