--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header">
           <nav class="page-header__nav">
             <a class="logo" href="./index.html">
-              Web<span class="logo__text--black">Studio</span>
+              Web<span class="logo__text-black">Studio</span>
             </a>
             <ul class="site-nav">
               <li class="site-nav__item">
@@ -229,8 +229,11 @@
                 alt="Разаработка програмного обеспичения"
                 width="370"
                 height="294"
+                class="works__image"
               />
-              <div class="works__text"><p>Десктопные приложения</p></div>
+              <div class="works__content">
+                <p class="works__text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="works__item">
               <img
@@ -238,8 +241,11 @@
                 alt="Андроид разработка"
                 width="370"
                 height="294"
+                class="works__image"
               />
-              <div class="works__text"><p>Мобильные приложения</p></div>
+              <div class="works__content">
+                <p class="works__text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="works__item">
               <img
@@ -247,8 +253,11 @@
                 alt="Дизайн"
                 width="370"
                 height="294"
+                class="works__image"
               />
-              <div class="works__text"><p>Дизайнерские решения</p></div>
+              <div class="works__content">
+                <p class="works__text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -264,6 +273,7 @@
                 alt="Игорь Демьяненко"
                 width="270"
                 height="260"
+                class="team-member__image"
               />
               <h3 class="team-member__name">Игорь Демьяненко</h3>
               <p class="team-member__position">Product Designer</p>
@@ -304,6 +314,7 @@
                 alt="Ольга Репина"
                 width="270"
                 height="260"
+                class="team-member__image"
               />
               <h3 class="team-member__name">Ольга Репина</h3>
               <p class="team-member__position">Frontend Developer</p>
@@ -345,6 +356,7 @@
                 alt="Николай Тарасов"
                 width="270"
                 height="260"
+                class="team-member__image"
               />
               <h3 class="team-member__name">Николай Тарасов</h3>
               <p class="team-member__position">Marketing</p>
@@ -386,6 +398,7 @@
                 alt="Михаил Ермаков"
                 width="270"
                 height="260"
+                class="team-member__image"
               />
               <h3 class="team-member__name">Михаил Ермаков</h3>
               <p class="team-member__position">UI Designer</p>
@@ -482,7 +495,7 @@
       <div class="container page-footer__container">
         <div>
           <a class="logo" href="./index.html"
-            >Web<span class="logo__text--white">Studio</span></a
+            >Web<span class="logo__text-white">Studio</span></a
           >
           <address>
             <ul class="address">
