--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="section section--work">
+      <section class="section section__work">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="works">
@@ -263,7 +263,7 @@
         </div>
       </section>
       <!--Наша команда -->
-      <section class="section section--team">
+      <section class="section section__team">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team-member">
